# intel-lpmd-dinit

./: .gitignore  Makefile.am  README.md  configure.ac
data/: Makefile.am  intel_lpmd.dinit  intel_lpmd_config.xml  intel_lpmd_config_F6_M170.xml  intel_lpmd_config_F6_M189.xml  intel_lpmd_config_F6_M204.xml  intel_lpmd_config_examples.xml  intel_lpmd_config_experimental.xml  org.freedesktop.intel_lpmd.service.in
man/: intel_lpmd.8  intel_lpmd_config.xml.5
src/: lpmd_cgroup.c  lpmd_cpumask.c  lpmd_main.c
src/include/: lpmd.h
tests/: lpm_test_interface.sh
